make footer and link

--- a/koengineerTop.html
+++ b/koengineerTop.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <title>高円寺ニア</title>
     <link rel="stylesheet" href="/Users/yokoidaiki/Desktop/HP/css/common.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/Users/yokoidaiki/Desktop/HP/JS/script.js"></script>
   </head>
   <body>
     <div class="header">
       <div class="header_logo">KO-engineerの交友録</div>
       <div class="header_list">
         <ul>
-          <li>高円寺ニアとは？</li>
-          <li>何をしているか</li>
-          <li>問い合わせ</li>
+          <li class="topMenu"><a href="/Users/yokoidaiki/Desktop/HP/whatskoengineer.html" class="topLink">高円寺ニアとは？</a></li>
+          <li class="topMenu"><a href="" class="topLink">何をしているか</a></li>
+          <li class="topMenu"><a href="" class="topLink">問い合わせ</a></li>
         </ul>
       </div>
     </div>
@@ -21,24 +23,34 @@
       <div class="contents_item" id="aoki_contents">
           <img src="/Users/yokoidaiki/Desktop/HP/img/001.png" width="200" height="200">
           <p class="aoki_text">
-            青木琢人
+            青木
           </p>
       </div>
       <div class="contents_item" id="mori_contents">
         <img src="/Users/yokoidaiki/Desktop/HP/img/013.png" width="200" height="200">
           <p class="mori_text">
-            森早人
+            森
           </p>
       </div>
       <div class="contents_item" id="yokoi_contents">
         <img src="/Users/yokoidaiki/Desktop/HP/img/025.png" width="200" height="200">
           <p class="yokoi_text">
-            横井大樹
+            横井
           </p>
       </div>
 
     </div>
 
-    <script src="/Users/yokoidaiki/Desktop/HP/JS/script.js"></script>
+    <div class="footer">
+      <div class="footer_logo">KO-engineer</div>
+      <div class="footer_list">
+        <ul>
+          <li>高円寺ニア</li>
+          <li>概要</li>
+          <li>問い合わせ</li>
+        </ul>
+      </div>
+    </div>
+
   </body>
 </html>
